feat: Add creator_name to frame model
