# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_05_14_234918) do
+ActiveRecord::Schema[8.0].define(version: 2025_09_17_002635) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -56,6 +56,7 @@ ActiveRecord::Schema[8.0].define(version: 2025_05_14_234918) do
     t.datetime "shooted_at"
     t.boolean "private", default: false
     t.string "joined_tags"
+    t.string "creator_name"
   end
 
   create_table "taggings", force: :cascade do |t|
